# lending-platform-django

./: .gitignore  README.org  pyproject.toml  requirements.txt
lenme_django/: manage.py
lenme_django/api_borrowers/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
lenme_django/api_borrowers/migrations/: 0001_initial.py
lenme_django/api_investors/: apps.py  models.py  serializers.py  urls.py  views.py
lenme_django/api_investors/migrations/: 0001_initial.py
lenme_django/api_loans/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
lenme_django/api_loans/migrations/: 0001_initial.py  0002_alter_loan_amount_alter_loan_period.py  0003_alter_offer_interest_rate.py  0004_alter_loan_interest_rate.py  0005_pendingoffers.py
lenme_django/api_payment/: apps.py  serializers.py  urls.py  views.py
lenme_django/lenme_django/: asgi.py  settings.py  urls.py  wsgi.py
